--- a/english.html
+++ b/english.html
@@ -9148,7 +9148,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200510134950730" title="$:/temp/search">
+<div created="20161023184814872" modified="20200513151740437" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9881,7 +9881,7 @@ The sweetest and prettiest [[flower's shop|https://bishvilflowers.co.il/]] with 
 
 </pre>
 </div>
-<div created="20191113141855567" modified="20200324165709701" tags="music [[outer sisters]] [[Hunky Dory]]" title="Bjork">
+<div created="20191113141855567" modified="20200513151431193" tags="music [[outer sisters]] [[Hunky Dory]] [[Stories from the future]]" title="Bjork">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[Rushell]]:
@@ -9938,7 +9938,7 @@ Carrot, zucchini, celery stick, dried pea, leek
 
  &lt;&lt;heblink [[מרק טחון]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200426140135642" tags="[[On the road to somewhere]] [[Iry and Gura]] [[The global village]] [[Dreams that we've dreamt]] Families" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200513151347116" tags="[[On the road to somewhere]] [[Iry and Gura]] [[The global village]] [[Dreams that we've dreamt]] Families [[Stories from the future]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 
@@ -10910,7 +10910,7 @@ In the family meetings in the mornings my father used to stand before us and hol
 
  &lt;&lt;heblink [[עץ המשפחה של אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200215222945436" modified="20200324170231173" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]] [[Hunky Dory]]" title="Exile">
+<div created="20200215222945436" modified="20200513151450146" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]] [[Hunky Dory]] [[Stories from the future]]" title="Exile">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -11489,7 +11489,7 @@ Here in the picture are Hanna my mother and I, few months before she passed away
 
 </pre>
 </div>
-<div created="20200213170345269" modified="20200216170828354" tags="[[Outer sisters]] Films" title="Harry Dean Stanton">
+<div created="20200213170345269" modified="20200513151551070" tags="[[Outer sisters]] Films [[Stories from the future]]" title="Harry Dean Stanton">
 <pre>[img[pictures/harry-dean-stanton.jpg]]
 
 !!![[Yoyo]]:
@@ -11740,7 +11740,7 @@ Once and for all I would like to apologize in the name of all apologies for my i
 
 </pre>
 </div>
-<div created="20200212174127022" modified="20200217121804649" tags="Music [[How many songs can you even invent at all]] [[The global village]]" title="Imagine">
+<div created="20200212174127022" modified="20200513151407494" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
 <pre>[img[pictures/imagine.jpg]]
 
 !!![[Coen Sisters]]:
@@ -11899,7 +11899,7 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200223190516303" modified="20200223190831707" tags="[[Menopause sisters]] [[Outer sisters]] Films" title="Jane Fonda">
+<div created="20200223190516303" modified="20200513151326347" tags="[[Menopause sisters]] [[Outer sisters]] Films Mothers" title="Jane Fonda">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 
@@ -12764,7 +12764,7 @@ meaning
  &lt;&lt;heblink [[האחיות בלות]]&gt;&gt;
 </pre>
 </div>
-<div created="20200303102617862" modified="20200330170620085" tags="[[Monkeys with car keys]] [[Hunky Dory]] [[Corona beings]]" title="Mental generation">
+<div created="20200303102617862" modified="20200513151532740" tags="[[Monkeys with car keys]] [[Hunky Dory]] [[Corona beings]] [[Stories from the future]]" title="Mental generation">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
@@ -12797,7 +12797,7 @@ This generation is carrying on his back generations and generations of unconscio
 
 </pre>
 </div>
-<div created="20200308094057874" modified="20200308094213258" tags="[[Iry claims]] [[The global village]] [[On the road to somewhere]]" title="Metamorphosis">
+<div created="20200308094057874" modified="20200513151509118" tags="[[Iry claims]] [[The global village]] [[On the road to somewhere]] [[True stories]]" title="Metamorphosis">
 <pre>[img[pictures/gilgulim.jpg]]
 
 
@@ -12829,7 +12829,7 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
  &lt;&lt;heblink [[מייק לי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200319131912314" modified="20200324171408204" tags="Music [[Outer sisters]] Films [[Hunky Dory]]" title="Miles Davis">
+<div created="20200319131912314" modified="20200513151633947" tags="Music [[Outer sisters]] Films [[Hunky Dory]] [[Stories from the future]]" title="Miles Davis">
 <pre>[img[pictures/miles-davis.jpg]]
 
 
@@ -12851,8 +12851,7 @@ I’ve watched the interesting [[film|https://www.imdb.com/title/tt9358200/]] ab
 </pre>
 </div>
 <div created="20200511174345239" modified="20200511174539772" tags="[[A friend]] Mothers Families" title="Minda">
-<pre>
-[img[pictures/minda.jpg]]
+<pre>[img[pictures/minda.jpg]]
 
 
 
@@ -13436,7 +13435,7 @@ Love him as a sister,
  &lt;&lt;heblink [[מלפפונים חמוצים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213181241224" modified="20200312201808724" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
+<div created="20200213181241224" modified="20200513151715726" tags="[[Outer sisters]] [[Iry claims]] [[Stories from the future]]" title="Pina Bausch">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 
@@ -13512,7 +13511,7 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 </pre>
 </div>
-<div created="20200213204850477" modified="20200324171845599" tags="[[Outer sisters]] Music Films [[Hunky Dory]]" title="Prince">
+<div created="20200213204850477" modified="20200513151737591" tags="[[Outer sisters]] Music Films [[Hunky Dory]] [[Stories from the future]]" title="Prince">
 <pre>[img[pictures/prince.jpg]]
 
 
@@ -14195,8 +14194,7 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
 </pre>
 </div>
 <div created="20200510133801475" modified="20200510134701636" tags="[[Iry and Gura]] [[The global village]] [[Monkeys with car keys]]" title="Stories from the future">
-<pre>
-[img[pictures/stories-from-the-future.jpg]]
+<pre>[img[pictures/stories-from-the-future.jpg]]
 
 
 
@@ -14421,7 +14419,7 @@ She is the owner of an old green Ford pickup truck (the little machine).
  &lt;&lt;heblink [[ביג לבובסקי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212155206056" modified="20200217122016178" tags="[[True stories]] [[On the road to somewhere]] [[The global village]]" title="The blue is already here">
+<div created="20200212155206056" modified="20200513151614008" tags="[[True stories]] [[On the road to somewhere]] [[The global village]] [[Stories from the future]]" title="The blue is already here">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[Yoyo]]:
@@ -14567,7 +14565,7 @@ On the right side there is a cooling room, a freezer and three little storerooms
 
 </pre>
 </div>
-<div created="20200215220929667" modified="20200324172337613" tags="[[Iry claims]] [[Hunky Dory]]" title="The Face Directed Outside">
+<div created="20200215220929667" modified="20200513151655356" tags="[[Iry claims]] [[Hunky Dory]] [[Stories from the future]]" title="The Face Directed Outside">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[Iry]]:
