--- a/index.html
+++ b/index.html
@@ -9225,10 +9225,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200511172215330" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200513145844336" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200511175842845" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200513151253896" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9237,7 +9237,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סיפורים מהעתיד]] מינדה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9418,7 +9418,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20200426133108012" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה [[הכפר הגלובלי]] סגירים משפחות" title="blue-marble-hood">
+<div created="20190221150238201" modified="20200513145906222" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה [[הכפר הגלובלי]] סגירים משפחות [[סיפורים מהעתיד]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
@@ -9471,7 +9471,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 &lt;&lt;englink [[HH]]&gt;&gt;</pre>
 </div>
-<div created="20170504194252766" modified="20200320092118976" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה [[הכפר הגלובלי]] סגירים" title="imagine">
+<div created="20170504194252766" modified="20200513145931911" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="imagine">
 <pre>[img[pictures/imagine.jpg]]
 
 !!![[האחיות כהן]]:
@@ -10424,7 +10424,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170601134808349" modified="20200324163004024" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[האנקי דורי]]" title="אירי טוענת">
+<div created="20170601134808349" modified="20200513150427032" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[האנקי דורי]] [[סיפורים מהעתיד]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 !!![[גורה]]:
@@ -10899,7 +10899,7 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170623150317093" modified="20200216154518925" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="ביורק">
+<div created="20170623150317093" modified="20200513150107871" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]] [[סיפורים מהעתיד]]" title="ביורק">
 <pre>[img[pictures/bjork.jpg]]
 
 !!![[ראשל]]:
@@ -11204,7 +11204,7 @@ Is where I want to be
 &lt;&lt;englink [[James Gandolfini]]&gt;&gt;
 </pre>
 </div>
-<div created="20181003131016162" modified="20200507151106664" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
+<div created="20181003131016162" modified="20200513150201165" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים אימהות" title="ג'יין פונדה">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 !!![[אווה]]:
@@ -11894,7 +11894,7 @@ Is where I want to be
 &lt;&lt;englink [[Kiryat Sefer Park]]&gt;&gt;
 </pre>
 </div>
-<div created="20180109154156686" modified="20200320092748066" tags="[[אירי טוענת]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים" title="גלגולים">
+<div created="20180109154156686" modified="20200513150308758" tags="[[אירי טוענת]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="גלגולים">
 <pre>[img[pictures/gilgulim.jpg]]
 
 !!![[רוז'ה]]:
@@ -11910,7 +11910,7 @@ Is where I want to be
 &lt;&lt;englink [[Metamorphosis]]&gt;&gt;
 </pre>
 </div>
-<div created="20170105170620001" modified="20200320092803500" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים" title="גלות">
+<div created="20170105170620001" modified="20200513150240108" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -12113,7 +12113,7 @@ Is where I want to be
 
 &lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
-<div created="20200303102502696" modified="20200330161857120" tags="[[קופים ממונעים]] ילדים סגירים [[האנקי דורי]] [[הלכות קורונה]]" title="דור הנפש">
+<div created="20200303102502696" modified="20200513150345283" tags="[[קופים ממונעים]] ילדים סגירים [[האנקי דורי]] [[הלכות קורונה]] [[סיפורים מהעתיד]]" title="דור הנפש">
 <pre>[img[pictures/mental-generation.jpg]]
 
 
@@ -12497,7 +12497,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[HaAarba`a 2]]&gt;&gt;
 </pre>
 </div>
-<div created="20170918121843399" modified="20200213170643784" tags="[[אחיות חוץ]] סרטים" title="הארי דין סטנטון">
+<div created="20170918121843399" modified="20200513150518106" tags="[[אחיות חוץ]] סרטים [[סיפורים מהעתיד]]" title="הארי דין סטנטון">
 <pre>[img[pictures/harry-dean-stanton.jpg]]
 
 !!![[יויו]]:
@@ -12779,7 +12779,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170916144114074" modified="20200320093319196" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים" title="הכחול כבר כאן">
+<div created="20170916144114074" modified="20200513150558361" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים [[סיפורים מהעתיד]]" title="הכחול כבר כאן">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[יויו]]:
@@ -15900,11 +15900,11 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[They feed the conscience]]&gt;&gt;</pre>
 </div>
-<div created="20200506121255099" modified="20200510134249544" tags="[[מטא בדיון]] בתים [[סיפורים מהעתיד]]" title="מאלו">
+<div created="20200506121255099" modified="20200512190411136" tags="[[מטא בדיון]] בתים [[סיפורים מהעתיד]]" title="מאלו">
 <pre>[img[pictures/malo.jpg]]
 
 
-הגעתי למאלו בעקבות סיפור שסבת סבתי סיפרה לי על סב סבתה.
+הגעתי למאלו בעקבות סיפור שסבת סבתי סיפרה לי על סב סבתה, ששמו היה מאלו.
 
 
 
@@ -16319,7 +16319,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200319131749847" modified="20200324171428931" tags="מוזיקה סרטים [[אחיות חוץ]] סגירים [[האנקי דורי]]" title="מיילס דיוויס">
+<div created="20200319131749847" modified="20200513150852692" tags="מוזיקה סרטים [[אחיות חוץ]] סגירים [[האנקי דורי]] [[סיפורים מהעתיד]]" title="מיילס דיוויס">
 <pre>[img[pictures/miles-davis.jpg]]
 
 !!![[יויו]]
@@ -18037,7 +18037,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Grape leaves]]&gt;&gt;
 </pre>
 </div>
-<div created="20170628145012336" modified="20200324164429742" tags="[[אירי טוענת]] [[הכפר הגלובלי]] סגירים [[האנקי דורי]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20200513151020397" tags="[[אירי טוענת]] [[הכפר הגלובלי]] סגירים [[האנקי דורי]] [[סיפורים מהעתיד]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
@@ -18732,7 +18732,7 @@ __אופן ההכנה____
 &lt;&lt;englink [[Philip Seymour Hoffman]]&gt;&gt;
 </pre>
 </div>
-<div created="20170801101117385" modified="20200320100104226" tags="[[אחיות חוץ]] [[אירי טוענת]] סגירים" title="פינה באוש">
+<div created="20170801101117385" modified="20200513151107147" tags="[[אחיות חוץ]] [[אירי טוענת]] סגירים [[סיפורים מהעתיד]]" title="פינה באוש">
 <pre>[img[pictures/pina-bausch.jpg]]
 
 !!![[אירי]]:
@@ -18888,7 +18888,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181021143810622" modified="20200324164742350" tags="[[אחיות חוץ]] מוזיקה סרטים סגירים [[האנקי דורי]]" title="פרינס">
+<div created="20181021143810622" modified="20200513151141312" tags="[[אחיות חוץ]] מוזיקה סרטים סגירים [[האנקי דורי]] [[סיפורים מהעתיד]]" title="פרינס">
 <pre>[img[pictures/prince.jpg]]
 
 !!![[הצוות]]:
