--- a/index.html
+++ b/index.html
@@ -701,6 +701,8 @@ Error message and password prompt
 
 <li>חבר</li>
 
+<li>חודג' שמחת המזל</li>
+
 <li>חוה אלברשטיין</li>
 
 <li>חומרים</li>
@@ -9237,7 +9239,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חודג' שמחת המזל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9257,7 +9259,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200510140703637" title="$:/temp/search">
+<div created="20161023184814872" modified="20200517145825334" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13421,6 +13423,25 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[A friend]]&gt;&gt;</pre>
 </div>
+<div created="20200520095721659" modified="20200520105703630" tags="[[כאן בגטו]] [[הלכות קורונה]] חבר [[אחיות חוץ]]" title="חודג' שמחת המזל">
+<pre>[img[pictures/hoodjclub.jpg]]
+
+
+
+
+''ליודעי ח&quot;ן בלבד''
+
+
+
+
+&lt;&lt;englink [[The Hoodj luck club]]&gt;&gt;
+
+
+
+
+
+</pre>
+</div>
 <div created="20180328131528706" modified="20200410104239645" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
 
@@ -16272,7 +16293,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20190617131650064" modified="20200511174609811" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
+<div created="20190617131650064" modified="20200520105528044" tags="בתים [[חיות אוכל]] משפחות לחם" title="מטבחים">
 <pre>[img[pictures/kitchens.jpg]]
 
 !!![[יויו]]:
@@ -16440,7 +16461,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[Pickles]]&gt;&gt;
 </pre>
 </div>
-<div created="20170527145749109" modified="20200215110105662" tags="[[בחוות החיות]]" title="ממשיכים לדמם">
+<div created="20170527145749109" modified="20200517145839058" tags="[[בחוות החיות]] מוזיקה" title="ממשיכים לדמם">
 <pre>[img[pictures/benataim-medamemim.jpg]]
 
 
