--- a/english.html
+++ b/english.html
@@ -531,7 +531,7 @@ Error message and password prompt
 
 <li>Genevieve</li>
 
-<li>Gezuntheights</li>
+<li>Gesund-Heights</li>
 
 <li>Ghetto`s map</li>
 
@@ -9121,7 +9121,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200503075637601" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200503075709194" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200522143748408" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9130,7 +9130,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Cd store]] Gesund-Heights [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9150,7 +9150,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200513151740437" title="$:/temp/search">
+<div created="20161023184814872" modified="20200522143723836" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10065,12 +10065,12 @@ add quarter cup of olive oil and three sliced garlic cloves
  &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226101554988" modified="20200410105658822" tags="HH Music [[How many songs can you even invent at all]]" title="Cd store">
+<div created="20200226101554988" modified="20200522143832832" tags="HH Music [[How many songs can you even invent at all]]" title="Cd store">
 <pre>[img[pictures/music-house.jpg]]
 
 !!![[Gura]]:
 
-The CDs store is at the first floor of [[Gezuntheights]]. It belongs to [[Shalom]], like the whole building, and [[Eva|DJ and discs dudet]] is the one who runs it. In the store there is a little recording studio, who serves Caterpillar rraio.
+The CDs store is at the first floor of [[Gesund-Heights]]. It belongs to [[Shalom]], like the whole building, and [[Eva|DJ and discs dudet]] is the one who runs it. In the store there is a little recording studio, who serves Caterpillar radio.
 
 
 
@@ -10912,7 +10912,7 @@ In the family meetings in the mornings my father used to stand before us and hol
 
  &lt;&lt;heblink [[עץ המשפחה של אווה]]&gt;&gt;</pre>
 </div>
-<div created="20200215222945436" modified="20200513151450146" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]] [[Hunky Dory]] [[Stories from the future]]" title="Exile">
+<div created="20200215222945436" modified="20200521084918689" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]] [[The global village]] [[Hunky Dory]] [[Stories from the future]]" title="Exile">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -10923,7 +10923,7 @@ The thing I've thought about lately (it started last year, with the passing of [
 
 Maybe the day that we'll reach, what we call, other planets is not that far. In this particular point of time of course it doesn't seem that we could [[transfer ourselves there|The Face Directed Outside]], and if those words are even a little bit true, this is Australia.
 
-The idea that this is exile, made me think in a second about explanations of many things, but to summarize them in a sentence -with the aspiration of a reinforcing gaze, like they say today- maybe this exile here, is some sort of maturity ceremony, and maybe after you pass it, you could finally reach your star, maybe that's what Buddhists call [[nirvana|https://en.wikipedia.org/wiki/Nirvana]]. It doesn't seem probable to me that when we come back to our star everything becomes simple- but it's not easy that feel at home.
+The idea that this is exile, made me think on the spoot about explanations of many things, but to summarize them in a sentence -with the aspiration of a reinforcing gaze, like they say today- maybe this exile here, is some sort of maturity ceremony, and maybe after you pass it, you could finally reach your star, maybe that's what Buddhists call [[nirvana|https://en.wikipedia.org/wiki/Nirvana]]. It doesn't seem probable to me that when we come back to our star everything becomes simple- but it's not easy to feel at home.
 
 I want to think that David Bowie returned to his star peacefully, and by that accomplished his mission, if not beyond.
 
@@ -11227,7 +11227,7 @@ She loves us and take care of us all. In the end of every working day she moves 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
-<div created="20200322160112085" modified="20200322160317256" tags="HH Houses" title="Gezuntheights">
+<div created="20200322160112085" modified="20200522143725402" tags="HH Houses" title="Gesund-Heights">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 
@@ -14650,8 +14650,7 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 </pre>
 </div>
 <div created="20200520105107763" modified="20200520105454545" tags="[[Here in the Ghetto]] [[Corona beings]] [[Outer sisters]] [[A friend]]" title="The Hoodj luck club">
-<pre>
-[img[pictures/hoodjclub.jpg]]
+<pre>[img[pictures/hoodjclub.jpg]]
 
 
 
