--- a/index.html
+++ b/index.html
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק</li>
 
+<li>$:/state/folded/סיפורים מהעתיד</li>
+
 <li>$:/state/Link/--15630481/search</li>
 
 <li>$:/state/Link/--2004176897/search</li>
@@ -9197,6 +9199,9 @@ Error message and password prompt
 <div created="20180511193133078" modified="20180511193137282" title="$:/state/folded/כדורי קטניות ברוטב קוקוס וקארי ירוק">
 <pre>show</pre>
 </div>
+<div created="20200521100025033" modified="20200521100029064" title="$:/state/folded/סיפורים מהעתיד">
+<pre>show</pre>
+</div>
 <div created="20161112214624841" modified="20161112214653371" title="$:/state/Link/--15630481/search">
 <pre></pre>
 </div>
@@ -9239,7 +9244,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חודג' שמחת המזל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="געזונטהייטס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9259,7 +9264,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200517145825334" title="$:/temp/search">
+<div created="20161023184814872" modified="20200522143648404" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11991,7 +11996,7 @@ Is where I want to be
 &lt;&lt;englink [[Gan-Ya]]&gt;&gt;
 </pre>
 </div>
-<div created="20161024180611154" modified="20200322160443586" tags="HH בתים" title="געזונטהייטס">
+<div created="20161024180611154" modified="20200522143645254" tags="HH בתים" title="געזונטהייטס">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 !!![[גורה]]:
@@ -12008,7 +12013,7 @@ Is where I want to be
 
 
 
-&lt;&lt;englink [[Gezuntheights]]&gt;&gt;
+&lt;&lt;englink [[Gesund-Heights]]&gt;&gt;
 </pre>
 </div>
 <div created="20170409193149814" modified="20200306141724984" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="גרטן תפוחי אדמה">
@@ -16372,12 +16377,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Mimi of Alfred]]&gt;&gt;</pre>
 </div>
-<div created="20200511171922041" modified="20200511175819446" tags="אימהות משפחות חבר" title="מינדה">
+<div created="20200511171922041" modified="20200521103537367" tags="אימהות משפחות חבר" title="מינדה">
 <pre>[img[pictures/minda.jpg]]
 
 !!![[פיליפ]]:
 
-מינדה היא אימה של בליי, אשתו הטרייה של [[מקס|אני הפסיכיאטר]] בני הבכור. לבעלה קוראים ראודור וחוץ ממינדה יש להם גם את אלו. היא הרבליסטית ועוד דברים מעניינים ויפים.
+מינדה היא אימה של בליי, אשתו הטרייה של [[מקס|אני הפסיכיאטר]] בני הבכור. לבעלה קוראים ראודור וחוץ מבליי יש להם גם את אלו. היא הרבליסטית ועוד דברים מעניינים ויפים.
 
 
 
