--- a/english.html
+++ b/english.html
@@ -513,8 +513,6 @@ Error message and password prompt
 
 <li>From the kitchen's window</li>
 
-<li>From the retreat's window</li>
-
 <li>Gabriel Fauré</li>
 
 <li>Galsi</li>
@@ -854,6 +852,8 @@ Error message and password prompt
 <li>Our Father</li>
 
 <li>Our grandma</li>
+
+<li>Out of the retreat's window</li>
 
 <li>Outer sisters</li>
 
@@ -9118,10 +9118,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200503075637601" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200522143855609" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200522143748408" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200522151533354" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9130,7 +9130,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Cd store]] Gesund-Heights [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[David Bowie]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9150,7 +9150,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200522143723836" title="$:/temp/search">
+<div created="20161023184814872" modified="20200522152414894" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10564,10 +10564,13 @@ Sometimes I ask myself, do you have a [[spirit level|https://en.wikipedia.org/wi
 
  &lt;&lt;heblink [[דבקה]]&gt;&gt;</pre>
 </div>
-<div created="20200226063122808" modified="20200503153752438" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]] Windows" title="Dalya`s room">
+<div created="20200226063122808" modified="20200523160013361" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Houses [[True stories]] [[Hunky Dory]] Windows" title="Dalya`s room">
 <pre>[img[pictures/dalya.jpg]]
 
 
+!!![[Tomer]]:
+
+This is Dalya's room, my wonderful [[Alexander|Alexander Technique]] teacher, I come to her place every week for a lesson. We enter the room, only after we sit and talk by the dining table, located between the kitchen and the living room with the wide windows facing them a line of cypress trees. An island of silence in the middle of everything. Later on the chair, while Dalya directs me and speaks to me, I stop, breathe, dissemble and reconnect, initiate the gaze when a white dove lands on the window in front of me. &quot;Have you seen that?&quot; she asks me. &quot;Yes&quot;, I answer, and again I'm a little different, full of [[a new sound|https://www.youtube.com/watch?v=oDBl0aqrl6Q]].
 
 
 
@@ -10657,8 +10660,22 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 
 </pre>
 </div>
-<div created="20200215220237328" modified="20200510134801229" tags="[[Outer sisters]] Music Films [[Iry claims]] [[Hunky Dory]] [[Stories from the future]]" title="David Bowie">
+<div created="20200215220237328" modified="20200523164308657" tags="[[Outer sisters]] Music Films [[Iry claims]] [[Hunky Dory]] [[Stories from the future]]" title="David Bowie">
 <pre>[img[pictures/david-bowie.jpg]]
+
+
+!!![[Iry]]:
+
+On January 10th, 2016, [[David Bowie|https://en.wikipedia.org/wiki/David_Bowie]] passed away. I woke up late that morning. I entered the apartment through the balcony. [[I can't give everything away|https://www.youtube.com/watch?v=OZscv36UUHo]] was played loudly.
+
+Actually, we shouldn't had been surprised because [[Black Star|https://www.youtube.com/watch?v=kszLwBaC4Sw]] could have been played on You Tube a month or so before, and [[Yoyo]] told us more than once that he thinks its David's last album, and by listening you could tell he knows that's the way things are. [[Dandan]] told me the sad news as soon as I walked in.
+
+After the death and the [[finishing album|https://www.youtube.com/watch?v=kszLwBaC4Sw&amp;list=PL_VDqxGpwYjUPsYUReXDVZM67bJd40na9]]. [[Ziggy Stardust|https://www.youtube.com/watch?v=5UQvBzo_rJA&amp;index=6&amp;list=PLuR3CWq59OyrTdWAeVkqH3F6UziQICYeN]]. The things Yoyo said. The kind-of-requiem that Bowie wrote to himself in Yoyo's mind – everything together - I've thought that finally he must have returned to his motherstar, and maybe he was sent from a faraway star to an [[exile|Exile]] here in our remote earth.
+
+David Bowie is maybe the alieniest, in the best way there is, person who walked on this earth in this era, and he was the most in every way there is, including the [[non-generic gender|Gabriel Fauré]]. The idea that earth is actually an exile got me. Many times I thought that the soul can transfer between stars in the infinite space. When I was a kid I used to count the beauty spots on my body, and thought that the shape created by connecting them must be the shape of the planet I came from. Until the second grade I had 27 beauty spots, and about then I stopped counting.
+ 
+A funny thing is that in one of the holiday's meals, we played this game - if you could live someone else's life who would you pick, and Yoyo immediately said- David Bowie. I liked the idea so much that I adopted it, and even though I said I want to be [[Fredrick Matthias Alexander|F.M.Alexander]], Bowie sounds much more [[hunky dory|Hunky Dory]] to me.
+
 
 
  &lt;&lt;heblink [[דיוויד בואי]]&gt;&gt;
@@ -11110,16 +11127,6 @@ I don't follow my neighbors, god forbidden, but I certainly see them.
 
 
  &lt;&lt;heblink [[מהחלון של המטבח]]&gt;&gt;</pre>
-</div>
-<div created="20200503185958350" modified="20200503190251747" tags="Windows [[Here in the Ghetto]] [[Corona beings]] Houses" title="From the retreat's window">
-<pre>[img[pictures/retreatswindow.jpg]]
-
-
-
-
-
- &lt;&lt;heblink [[מהחלון של הרטריט]]&gt;&gt;
-</pre>
 </div>
 <div created="20200215222131458" modified="20200510134947458" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]] [[Stories from the future]]" title="Gabriel Fauré">
 <pre>[img[pictures/gabriel-faure.jpg]]
@@ -11851,8 +11858,13 @@ In order of understanding more, I recommend :
 
  &lt;&lt;heblink [[אירי וגורה]]&gt;&gt;</pre>
 </div>
-<div created="20200213162602188" modified="20200324170520906" tags="[[Iry and Gura]] [[The global village]] [[Hunky Dory]]" title="Iry claims">
+<div created="20200213162602188" modified="20200523163630969" tags="[[Iry and Gura]] [[The global village]] [[Hunky Dory]]" title="Iry claims">
 <pre>[img[pictures/iri-toenet.jpg]]
+
+
+!!![[Gura]]:
+
+Even when working at [[Genevieve]] - Iry shines among us. 
 
 
 &lt;&lt;list-links filter:&quot;[tag[Iry claims]]&quot;&gt;&gt;
@@ -12565,8 +12577,16 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
  &lt;&lt;heblink [[מג'דרה]]&gt;&gt;</pre>
 </div>
-<div created="20200506121422183" modified="20200510134601295" tags="Metafiction Houses [[Stories from the future]]" title="Malo">
+<div created="20200506121422183" modified="20200522151314733" tags="Metafiction Houses [[Stories from the future]]" title="Malo">
 <pre>[img[pictures/malo.jpg]]
+
+
+!!![[Minda]]:
+
+I've reached Malo after a story my granny's grandma told me about her grandma's grandpa, who was called Malo. 
+
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[Malo]]&quot;&gt;&gt;
@@ -12852,10 +12872,13 @@ I’ve watched the interesting [[film|https://www.imdb.com/title/tt9358200/]] ab
 
 </pre>
 </div>
-<div created="20200511174345239" modified="20200511174539772" tags="[[A friend]] Mothers Families" title="Minda">
+<div created="20200511174345239" modified="20200522151219383" tags="[[A friend]] Mothers Families" title="Minda">
 <pre>[img[pictures/minda.jpg]]
 
 
+!!![[Philip]]:
+
+Minda is the mother of Bly, the new wife of Max, [[my firstborn son|I, the psychiatrist]]. Her husband name is Reudor and apart from Bly they have Alo. She's a herbalist and many other interesting beautiful things.
 
 
 
@@ -13214,6 +13237,19 @@ I've met my only father, after many years we haven't met. This picture was taken
 
 
  &lt;&lt;heblink [[סבתא שלנו]]&gt;&gt;
+</pre>
+</div>
+<div created="20200503185958350" modified="20200522151526836" tags="Windows [[Here in the Ghetto]] [[Corona beings]] Houses" title="Out of the retreat's window">
+<pre>[img[pictures/retreatswindow.jpg]]
+
+
+!!![[Tomer]]:
+
+At the rear side of the house the retreat is located, or in its other name- the narrow restroom.  
+
+
+
+ &lt;&lt;heblink [[מהחלון של הרטריט]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212163427451" modified="20200426141431576" tags="[[Monkeys with car keys]] [[How many songs can you even invent at all]] [[Hunky Dory]] Families" title="Outer sisters">
@@ -14195,8 +14231,13 @@ You can read more [[trivia details|https://m.imdb.com/name/nm0000114/trivia?ref_
  &lt;&lt;heblink [[סטיב בושמי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200510133801475" modified="20200510134701636" tags="[[Iry and Gura]] [[The global village]] [[Monkeys with car keys]]" title="Stories from the future">
+<div created="20200510133801475" modified="20200522150828886" tags="[[Iry and Gura]] [[The global village]] [[Monkeys with car keys]]" title="Stories from the future">
 <pre>[img[pictures/stories-from-the-future.jpg]]
+
+
+!!![[Minda]]:
+
+The year is 2026, and I've been living here for 6 years.
 
 
 
@@ -15172,9 +15213,13 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
  &lt;&lt;heblink [[טוטם]]&gt;&gt;</pre>
 </div>
-<div created="20200226110658194" modified="20200330171428479" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]] [[Corona beings]]" title="Tower of Babylon">
+<div created="20200226110658194" modified="20200523163453225" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]] [[Corona beings]]" title="Tower of Babylon">
 <pre>[img[pictures/migdal-bavel.jpg]]
 
+
+!!![[Iry]]:
+
+All of us are Noah's descendants who spread among earth to this very day. many different tongues we've got, but a shared one as well - miximized global - the one used over the net, and connects us. I wouldn't wont the conservative of us, those frightened by the other, those who are afraid of the colorful, the expressive, the thinking, the rebellious, the strong opinionated - to scare us again and bring us to the racist tyrannical darkness. no! We won't sit and cry by the river- and we won't accept the idea that our almighty creator believes in divide et impera.   
 
 
 
