--- a/index.html
+++ b/index.html
@@ -9244,7 +9244,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="געזונטהייטס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מגדל בבל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9264,7 +9264,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200522143648404" title="$:/temp/search">
+<div created="20161023184814872" modified="20200522152439818" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16055,12 +16055,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Kitchen towels]]&gt;&gt;</pre>
 </div>
-<div created="20190908124152651" modified="20200320094917524" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים" title="מגדל בבל">
+<div created="20190908124152651" modified="20200522152736151" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]] סגירים" title="מגדל בבל">
 <pre>[img[pictures/migdal-bavel.jpg]]
 
 !!![[אירי]]:
 
-כולנו בני נח שהתפשטו על פני כדור הארץ עד לעצם היום הזה, ולשונות רבות ושונות לנו, אך גם אחת משותפת - גלובלית ממוקססת - זו שמדברים בה במרשתת, והיא מחברת בין כולנו. לא הייתי רוצה שניתן שוב לשמרנים שביננו, אלה שהאחר מבעית אותם, אלה שחוששים מהצבעוני, מהאקספרסיבי, מהחושב, מהמורד, מהדעתן - להפחיד אותנו שוב ולהכניסנו למחשכי הגזענות והרודנות - כי לא! לא נשב ונבכה על הנהרות - ולא נסכים לרעיון שבורא שלנו הטוב, מאמין בהפרד ומשול.
+כולנו בני נח שהתפשטו על פני כדור הארץ עד לעצם היום הזה, ולשונות רבות ושונות לנו, אך גם אחת משותפת - גלובלית ממוקססת - זו שמדברים בה במרשתת, והיא מחברת בין כולנו. לא הייתי רוצה שניתן שוב לשמרנים שביננו, אלה שהאחר מבעית אותם, אלה שחוששים מהצבעוני, מהאקספרסיבי, מהחושב, מהמורד, מהדעתן - להפחיד אותנו שוב ולהכניסנו למחשכי הגזענות והרודנות - כי לא! לא נשב ונבכה על הנהרות, ולא נסכים לרעיון שבורא שלנו הטוב, מאמין בהפרד ומשול.
 
 
 &lt;&lt;englink [[Tower of Babylon]]&gt;&gt;
@@ -16158,7 +16158,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200503185808988" modified="20200503190435495" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים" title="מהחלון של הרטריט">
+<div created="20200503185808988" modified="20200522151622393" tags="[[כאן בגטו]] [[הלכות קורונה]] חלונות בתים" title="מהחלון של הרטריט">
 <pre>[img[pictures/retreatswindow.jpg]]
 
 
@@ -16169,7 +16169,7 @@ We rise to play a greater part.
 
 
 
-&lt;&lt;englink [[From the retreat's window]]&gt;&gt;
+&lt;&lt;englink [[Out of the retreat's window]]&gt;&gt;
 
 
 </pre>
