--- a/english.html
+++ b/english.html
@@ -9130,7 +9130,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[David Bowie]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Iry claims]] [[David Bowie]] [[Hunky Dory]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11858,13 +11858,13 @@ In order of understanding more, I recommend :
 
  &lt;&lt;heblink [[אירי וגורה]]&gt;&gt;</pre>
 </div>
-<div created="20200213162602188" modified="20200523163630969" tags="[[Iry and Gura]] [[The global village]] [[Hunky Dory]]" title="Iry claims">
+<div created="20200213162602188" modified="20200523165259044" tags="[[Iry and Gura]] [[The global village]] [[Hunky Dory]]" title="Iry claims">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 
 !!![[Gura]]:
 
-Even when working at [[Genevieve]] - Iry shines among us. 
+Even when working at [[Genevieve]], Iry shines among us. 
 
 
 &lt;&lt;list-links filter:&quot;[tag[Iry claims]]&quot;&gt;&gt;
