--- a/index.html
+++ b/index.html
@@ -9244,7 +9244,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מגדל בבל]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[החדר של דליה]] [[מגדל בבל]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9264,7 +9264,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200522152439818" title="$:/temp/search">
+<div created="20161023184814872" modified="20200523165326588" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10431,12 +10431,12 @@ Sunny one so true, I love you.//
 
 </pre>
 </div>
-<div created="20170601134808349" modified="20200513150427032" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[האנקי דורי]] [[סיפורים מהעתיד]]" title="אירי טוענת">
+<div created="20170601134808349" modified="20200523165348782" tags="[[אירי וגורה]] [[הכפר הגלובלי]] [[האנקי דורי]] [[סיפורים מהעתיד]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 !!![[גורה]]:
 
-אפילו בעבודה [[אצל ז'נבייב|הקוסקוס]] - אירי עולה על כולנו. 
+אפילו בעבודה [[אצל ז'נבייב|הקוסקוס]], אירי עולה על כולנו. 
 
 
 &lt;&lt;list-links filter:&quot;[tag[אירי טוענת]]&quot;&gt;&gt;
